--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebGL_buildTest",
-        productVersion: "1.0",
+        productVersion: "1.0.0",
         showBanner: unityShowBanner,
       };
 
@@ -118,5 +118,20 @@
       document.body.appendChild(script);
 
     </script>
+    <!-- Service Worker 등록 코드 추가 -->
+    <script>
+      if ('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+              navigator.serviceWorker.register('./service-worker.js')
+              .then(registration => {
+                  console.log('Service Worker registered with scope:', registration.scope);
+              })
+              .catch(error => {
+                  console.log('Service Worker registration failed:', error);
+              });
+          });
+      }
+    </script>
+    <!-- Service Worker 등록 코드 끝 -->
   </body>
 </html>
