--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
     <script>
 
+      var unityInstanceRef;
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
@@ -65,7 +66,7 @@
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WebGL_buildTest",
-        productVersion: "1.0.14",
+        productVersion: "1.0.15",
         showBanner: unityShowBanner,
       };
 
@@ -106,6 +107,7 @@
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
               }).then((unityInstance) => {
+                window.unityInstanceRef = unityInstance;
                 loadingBar.style.display = "none";
                 fullscreenButton.onclick = () => {
                   unityInstance.SetFullscreen(1);
